--- a/leleo.html
+++ b/leleo.html
@@ -5,20 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>título estrutural que aparece na aba do navegador</title>
-    <link rel="stylesheet" href="isabela.css">
+    <link rel="stylesheet" href="leandro.css">
 </head>
 
 <body> 
     
-<h1> titulo 1 principal do BODY, título visual </h1>
-
-    <p> parágrafo 1 conteúdo <em>escrito em ITÁLICO</em> SEMPRE MARCADORES VISUAIS FICAM DENTRO DO BODY</p>
+<h1> PAVILHAO 9 </h1>
+<a="">site gavioes</a>
+<a="https://gavioes.com.br/">site gavioes</a>
+<strong> 
+    <p> O Grêmio Recreativo Cultural Social Bloco Torcida Clube Desportivo Pavilhão 9 é uma torcida organizada do Sport Club Corinthians Paulista, e ao mesmo tempo, uma entidade carnavalesca de São Paulo, Brasil. Foi fundada em 9 de setembro de 1990 por nove torcedores corintianos, em homenagem ao time de futebol da Casa de Detenção do Carandiru. É um Grêmio Recreativo, Cultural, Social e também um Bloco Carnavalesco, que atualmente participam dos desfiles oficiais do Carnaval de São Paulo, contando com diversas sub sedes pelo Brasil.</p>
 <p> parágrafo 2 conteúdo escrito CADA PARÁGRAFO DEVE SER ABERTO E FECHADO</p>
-    <h2> TÍTULO DOIS </h2>
-<p> parágrafo 3 conteúdo escrito NÃO ESQUECER DE SEMPRE DEIXAR OS MARCADORES H1 E P DENTRO DO BODY, OU SEJA, ACIMA DO SEU FECHAMENTO E ABAIXO DA SUA ABERTURA </p>
-<p> <strong> parágrafo 4 com conteúdo escrito em negrito, SE QUISER PODE SER APENAS UMA FRASE OU PALAVRA EM NEGRITO </strong> </p>
-    <h3> TÍTULO TRÊS</h3>
+    <h2> COMO SURGIU</h2>
+<p> Os fundadores da torcida realizavam um trabalho social na Casa de Detenção, onde anualmente formavam um time, o Corinthians do Pavilhão Nove, e realizavam um jogo de futebol beneficente contra um time de detentos. Também confeccionavam faixas e bandeiras para divulgarem suas atividades nos estádios, durante as partidas do Corinthians. Decidiram então criar uma torcida organizada e, em 9 de setembro de 1990, oficializou-se a fundação da entidade, denominada Clube Desportivo Pavilhão 9. </p>
+</strong> </p>
+    
     <p>parágrafo adendo</p>
-<img src="abertura.webp">
+    <div class="imagemcentralizada">
+        <img class="gavioes da fiel 1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/C.D._Pavilh%C3%A3o_9_%2801%29.jpg/800px-C.D._Pavilh%C3%A3o_9_%2801%29.jpg">
+<img src="">
+
+<UL>   
+
+<H3> TODAS AS TORCIDAS DO CORINTHIANS  </H3>
+
+<LI>GAVIOES DA FIEL        </LI>
+
+<LI>ESTOPIM DA FIEL </LI>
+
+<lI> CAMISETA 12</lI>
+
+</UL>
+
+
+
+
 </body>
 </html>
