--- a/leleo.html
+++ b/leleo.html
@@ -9,7 +9,17 @@
 </head>
 
 <body> 
-    
+<header>  
+        <nav>  
+
+     <a href="leleo.html">  home  </a>
+
+     <a href="titulos">  titulos   </a>
+
+    </nav>
+
+</header> 
+
 <h1> PAVILHAO 9 </h1>
 <a="">site gavioes</a>
 <a="https://gavioes.com.br/">site gavioes</a>
