--- a/titulos.html
+++ b/titulos.html
@@ -81,7 +81,4 @@
         </p>
         <H12>Campeonato Brasileiro Série B (2008) </H12> 
         <p> </p>
-         <h13> </h13>
-
-
-
+        <img src="gavioes.png">
