--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <header>  
         <nav>  
 
-     <a href="leleo.html">  home  </a>
+     <a href="index.html">  home  </a>
 
      <a href="titulos">  titulos   </a>
 
