--- a/titulos.html
+++ b/titulos.html
@@ -1,3 +1,15 @@
+<header>  
+        <nav>  
+
+     <a href="index.html">  home  </a>
+
+     <a href="titulos">  titulos   </a>
+
+    </nav>
+
+</header> 
+
+
 <h1>     Mundial de Clubes (2000)          </h1>Mundial de Clubes (2000)
 
 <P>Com o título brasileiro de 1998, o Corinthians foi o representante do país-sede no primeiro Campeonato Mundial de Clubes, promovido pela Fifa. O torneio foi disputado nas cidades de São Paulo e do Rio de Janeiro em janeiro de 2000. Na partida inicial, o Timão venceu o Raja Casablanca (MAR) por 2 a 0 com gols de Luizão e Fábio Luciano. Dois dias depois, o Alvinegro empatou em 2 a 2 com o Real Madrid (ESP). Edílson marcou os tentos do duelo, que ainda contou com uma defesa de pênalti de Dida no chute de Anelka.
