--- a/Index.html
+++ b/Index.html
@@ -10,11 +10,13 @@
 
 <body> 
 <header>  
+
+
         <nav>  
 
      <a href="index.html">  home  </a>
 
-     <a href="titulos">  titulos   </a>
+     <a href="titulos.html">  titulos   </a>
 
     </nav>
 
