--- a/Index.html
+++ b/Index.html
@@ -14,11 +14,8 @@
 
         <nav>  
 
-     <a href="index.html">  home  </a>
-
-     <a href="titulos.html">  titulos   </a>
-
-    </nav>
+     <a href="index.html"> home </a>
+<a href="titulos.html"> produtos </a>
 
 </header> 
 
